--- a/public/about/index.html
+++ b/public/about/index.html
@@ -29,6 +29,10 @@
 
 
 
+
+
+
+
 <html
   class="not-ready text-sm lg:text-base"
   style="--bg: #faf6f1"
@@ -77,6 +81,8 @@
 
   
   
+  
+  <link rel="preload" as="image" href="https://avatars.githubusercontent.com/u/89376495?v=4" />
   
   
 
