--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
 
 
 
+
+
+
+
 <html
   class="not-ready text-sm lg:text-base"
   style="--bg: #faf6f1"
@@ -68,6 +72,8 @@
 
   
   
+  
+  <link rel="preload" as="image" href="https://avatars.githubusercontent.com/u/89376495?v=4" />
   
   
 
@@ -268,6 +274,15 @@
 
 
 <div class="-mt-4 mb-20 flex items-start">
+  
+  <div
+    class="mr-5 shrink-0 rounded-full border-[0.5px] border-black/10 bg-white/50 p-3 shadow-xl dark:bg-white/80"
+  >
+    <img
+      class="my-0 h-14 w-14 rounded-full !bg-black/5 hover:animate-spin dark:!bg-black/80"
+      src="https://avatars.githubusercontent.com/u/89376495?v=4"
+    />
+  </div>
   
   
   <div>
