deploy: 18038d00c3e7aa79a415424883f8b29d9606fed8

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta name=author content>
 <link rel="preload stylesheet" as=style href=https://yota22721.github.io/main.min.css>
 <link rel=preload as=image href=https://yota22721.github.io/theme.png>
+<link rel=preload as=image href="https://avatars.githubusercontent.com/u/89376495?v=4">
 <link rel=preload as=image href=https://yota22721.github.io/twitter.svg>
 <link rel=preload as=image href=https://yota22721.github.io/github.svg>
 <link rel=preload as=image href=https://yota22721.github.io/rss.svg>
@@ -49,6 +50,9 @@
 </header>
 <main class="prose prose-neutral relative mx-auto min-h-[calc(100%-10rem)] max-w-3xl px-8 pt-20 pb-32 dark:prose-invert">
 <div class="-mt-4 mb-20 flex items-start">
+<div class="mr-5 shrink-0 rounded-full border-[0.5px] border-black/10 bg-white/50 p-3 shadow-xl dark:bg-white/80">
+<img class="my-0 h-14 w-14 rounded-full !bg-black/5 hover:animate-spin dark:!bg-black/80" src="https://avatars.githubusercontent.com/u/89376495?v=4">
+</div>
 <div>
 <h1 class="mt-1.5 mb-3 text-3xl font-bold">youtai</h1>
 <div class=break-words>
