--- a/about/index.html
+++ b/about/index.html
@@ -10,6 +10,7 @@
 <link rel="preload stylesheet" as=style href=https://yota22721.github.io/main.min.css>
 <script defer src=https://yota22721.github.io/highlight.min.js onload=hljs.initHighlightingOnLoad()></script>
 <link rel=preload as=image href=https://yota22721.github.io/theme.png>
+<link rel=preload as=image href="https://avatars.githubusercontent.com/u/89376495?v=4">
 <link rel=preload as=image href=https://yota22721.github.io/twitter.svg>
 <link rel=preload as=image href=https://yota22721.github.io/github.svg>
 <link rel=preload as=image href=https://yota22721.github.io/rss.svg>
