--- a/public/404.html
+++ b/public/404.html
@@ -47,7 +47,7 @@
   />
 
   
-  <title>404 Page not found - YouTai</title>
+  <title>404 Page not found - Yota blog</title>
 
   
   <meta name="theme-color" />
@@ -128,7 +128,7 @@
     <a
       class="-translate-x-[1px] -translate-y-0.5 text-3xl font-bold"
       href="https://yota22721.github.io/"
-      >YouTai</a
+      >Yota blog</a
     >
     <a
       class="btn-dark ml-6 h-6 w-6 shrink-0 cursor-pointer [background:url(./theme.svg)_left_center/cover_no-repeat] dark:invert dark:[background-position:right]"
@@ -253,8 +253,8 @@
   class="opaco mx-auto flex h-[5rem] max-w-3xl items-center px-8 text-[0.9em] opacity-60"
 >
   <div class="mr-auto">
-    &copy; 2022
-    <a class="link" href="https://yota22721.github.io/">YouTai</a>
+    &copy; 2023
+    <a class="link" href="https://yota22721.github.io/">Yota blog</a>
   </div>
   <a class="link mx-6" href="https://gohugo.io/" rel="noopener" target="_blank"
     >Powered by Hugo️️</a
