--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
   />
 
   
-  <title>YouTai</title>
+  <title>Yota blog</title>
 
   
   <meta name="theme-color" />
@@ -98,14 +98,14 @@
     rel="alternate"
     type="application/rss&#43;xml"
     href="https://yota22721.github.io/index.xml"
-    title="YouTai"
+    title="Yota blog"
   />
   
   <link
     rel="alternate"
     type="application/json"
     href="https://yota22721.github.io/index.json"
-    title="YouTai"
+    title="Yota blog"
   />
   
 
@@ -118,18 +118,18 @@
   
   
   
-  <meta property="og:title" content="YouTai" />
+  <meta property="og:title" content="Yota blog" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://yota22721.github.io/" />
 
 
   
-  <meta itemprop="name" content="YouTai">
+  <meta itemprop="name" content="Yota blog">
 <meta itemprop="description" content="">
   
   <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="YouTai"/>
+<meta name="twitter:title" content="Yota blog"/>
 <meta name="twitter:description" content=""/>
 
   
@@ -142,7 +142,7 @@
     <a
       class="-translate-x-[1px] -translate-y-0.5 text-3xl font-bold"
       href="https://yota22721.github.io/"
-      >YouTai</a
+      >Yota blog</a
     >
     <a
       class="btn-dark ml-6 h-6 w-6 shrink-0 cursor-pointer [background:url(./theme.svg)_left_center/cover_no-repeat] dark:invert dark:[background-position:right]"
@@ -286,7 +286,7 @@
   
   
   <div>
-    <h1 class="mt-1.5 mb-3 text-3xl font-bold">youtai</h1>
+    <h1 class="mt-1.5 mb-3 text-3xl font-bold">Yota</h1>
     <div class="break-words">
       Security enthusiast
     </div>
@@ -328,8 +328,8 @@
   class="opaco mx-auto flex h-[5rem] max-w-3xl items-center px-8 text-[0.9em] opacity-60"
 >
   <div class="mr-auto">
-    &copy; 2022
-    <a class="link" href="https://yota22721.github.io/">YouTai</a>
+    &copy; 2023
+    <a class="link" href="https://yota22721.github.io/">Yota blog</a>
   </div>
   <a class="link mx-6" href="https://gohugo.io/" rel="noopener" target="_blank"
     >Powered by Hugo️️</a
