--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
-<title>404 Page not found - YouTai</title>
+<title>404 Page not found - Yota blog</title>
 <meta name=theme-color>
 <meta name=description content>
 <meta name=author content>
@@ -29,7 +29,7 @@
 <body class="text-black duration-200 ease-out dark:text-white">
 <header class="mx-auto flex h-[5rem] max-w-3xl px-8 lg:justify-center">
 <div class="relative z-50 mr-auto flex items-center">
-<a class="-translate-x-[1px] -translate-y-0.5 text-3xl font-bold" href=https://yota22721.github.io/>YouTai</a>
+<a class="-translate-x-[1px] -translate-y-0.5 text-3xl font-bold" href=https://yota22721.github.io/>Yota blog</a>
 <a class="btn-dark ml-6 h-6 w-6 shrink-0 cursor-pointer [background:url(./theme.svg)_left_center/cover_no-repeat] dark:invert dark:[background-position:right]"></a>
 </div>
 <a class="btn-menu relative z-50 -mr-8 flex h-[5rem] w-[5rem] shrink-0 cursor-pointer flex-col items-center justify-center gap-2.5 lg:hidden"></a>
@@ -53,8 +53,8 @@
 </main>
 <footer class="opaco mx-auto flex h-[5rem] max-w-3xl items-center px-8 text-[0.9em] opacity-60">
 <div class=mr-auto>
-&copy; 2022
-<a class=link href=https://yota22721.github.io/>YouTai</a>
+&copy; 2023
+<a class=link href=https://yota22721.github.io/>Yota blog</a>
 </div>
 <a class="link mx-6" href=https://gohugo.io/ rel=noopener target=_blank>Powered by Hugo️️</a>️
 <a class=link href=https://github.com/nanxiaobei/hugo-paper rel=noopener target=_blank>▷ Paper 6</a>
